Changelog for CinemaVision

[- 0.0.46 -]

- fix:     Fix error with music enabled for trivia when locale is one that uses commas to represent a decimal point
- fix:     iTunes trailers now will use whatever is available (such as teasers) when no trailers are available
- fix:     Trailers that failed to resolve a URL were reducing the number of played trailers by one

[- 0.0.45 -]

- add:     Addon now sets the following home window properties:
           script.cinemavision.module.current = current module (ie. video, trivia, feature, trailer, audioformat)
           script.cinemavision.module.next = next module (ie. video, trivia, feature, trailer, audioformat)
           script.cinemavision.module.current.name
           script.cinemavision.module.next.name
           script.cinemavision.feature.next.title
           script.cinemavision.feature.next.dbid
           script.cinemavision.feature.next.dbtype
           script.cinemavision.feature.next.path
- change:  Changed Trailers setting 'Play unwatched trailers first' to 'Prefer unwatched over priority'
           Note: When enabled will search unwatched by source priority then watched by source priority
                 When disabled will search unwatched and then watched for each source by priority
- change:  Settings in section 'General' under heading 'Content' moved to new 'Content' section
- add:     Settings in 'Content' section under 'Scrapers (trailers)': Apple iTunes, Kodi Database, StereoscopyNews.com, Content Folder
- add:     Detection of 3D trailers based on tag match for Kodi Database trailers
- add:     Trailers scraper Stereoscopynews.com
- add:     Trailers module setting 'Filter 3D based on feature'
- change:  Removed 'Content' from Trailers setting 'Source' - added as option to Trailers Setting 'Scrapers' as 'Content Folder'
- add:     Content trailers now checked for 3D tags
- add:     Trailer source 'Directory' now uses 3D tags to filter files when 'Filter 3D based on feature' is enabled