@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <window>
     <defaultcontrol>201</defaultcontrol>
+    <animation effect="zoom" end="74.074074074,74.074074074" center="960,540" time="0" condition="!IsEmpty(Window(10000).Property(script.cinemavision.scope.2.40:1))">Conditional</animation>
+    <animation effect="zoom" end="75.925925926,75.925925926" center="960,540" time="0" condition="!IsEmpty(Window(10000).Property(script.cinemavision.scope.2.35:1))">Conditional</animation>
     <animation effect="slide" start="0,1080" end="0,0" time="200">WindowOpen</animation>
     <animation effect="slide" start="0,0" end="0,1080" time="200">WindowClose</animation>
     <coordinates>
