@@ -6,6 +6,8 @@
         <posx>0</posx>
         <posy>0</posy>
     </coordinates>
+    <animation effect="zoom" end="74.074074074,74.074074074" center="960,540" time="0" condition="!IsEmpty(Window(10000).Property(script.cinemavision.scope.2.40:1))">Conditional</animation>
+    <animation effect="zoom" end="75.925925926,75.925925926" center="960,540" time="0" condition="!IsEmpty(Window(10000).Property(script.cinemavision.scope.2.35:1))">Conditional</animation>
     <controls>
 
         <control type="image">
@@ -581,10 +583,10 @@
             </control>
 
             <control type="fixedlist" id="201">
-                <focusposition>13</focusposition>
-                <posx>-80</posx>
+                <focusposition>17</focusposition>
+                <posx>-400</posx>
                 <posy>0</posy>
-                <width>2160</width>
+                <width>2800</width>
                 <height>520</height>
                 <scrolltime>200</scrolltime>
                 <orientation>horizontal</orientation>
